The schema change for DataSet/CachedMetaData parameters.

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -1547,8 +1547,7 @@ Structure.ResultSetColumn=Column
 Structure.ComputedColumn=Computed Column
 Structure.ColumnHint=Column Hint
 Structure.IncludeLibrary=Include Library
-Structure.OutputParam=Output Parameter
-Structure.InputParam=Input Parameter
+Structure.DataSetParam=DataSet Parameter
 Structure.PropertyMask=Property Mask
 Structure.ExtendedProperty=Extended Property
 Structure.CachedMetaData=Cached Metadata
@@ -1679,17 +1678,15 @@ Structure.SelectionChoice.labelID=Label Resource Key
 #13. IncludeLibrary
 Structure.IncludeLibrary.fileName=Filename
 
-#14. OutpurParam
-Structure.OutputParam.position=Position
-Structure.OutputParam.name=Name
-Structure.OutputParam.dataType=Data Type
-
-#15. InputParam
-Structure.InputParam.position=Position
-Structure.InputParam.name=Name
-Structure.InputParam.dataType=Data Type
-Structure.InputParam.isOptional=Is Optional
-Structure.InputParam.defaultValue=Default Value
+#15. DataSetParam
+Structure.DataSetParam.name=Name
+Structure.DataSetParam.dataType=Data Type
+Structure.DataSetParam.position=Position
+Structure.DataSetParam.defaultValue=Default Value
+Structure.DataSetParam.isOptional=Is Optional
+Structure.DataSetParam.isNullable=Is Nullable
+Structure.DataSetParam.isInput=Is Input Parameter
+Structure.DataSetParam.isOutput=Is Output Parameter
 
 #16. ExtendedProperty
 Structure.ExtendedProperty.name=Name
@@ -1708,8 +1705,7 @@ Structure.Action.drillThroughBookmarkLink=Drillthrough Bookmark Link
 Structure.Action.drillThroughSearch=Search Keys
 
 #18. CachedMetaData
-Structure.CachedMetaData.inputParameters=Input parameters
-Structure.CachedMetaData.outputParameters=Output parameters
+Structure.CachedMetaData.parameters=Parameters
 Structure.CachedMetaData.resultSet=Result set columns
 
 
@@ -1834,8 +1830,9 @@ Element.DataSet.afterOpen=After open
 Element.DataSet.afterOpen.toolTip=Called just after BIRT opens the data set.
 Element.DataSet.afterClose=After close
 Element.DataSet.afterClose.toolTip=Called just after BIRT closes the data set.
-Element.DataSet.inputParameters=Input parameters
-Element.DataSet.outputParameters=Output parameters
+#Element.DataSet.inputParameters=Input parameters
+#Element.DataSet.outputParameters=Output parameters
+Element.DataSet.parameters=Parameters
 Element.DataSet.paramBindings=Parameter bindings
 Element.DataSet.resultSet=Result set
 Element.DataSet.computedColumns=Computed columns
