Modified display names in the resource files. Add isVisible properties for structure properties and some other properties.

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -1803,7 +1803,6 @@ Element.ReportDesign.slot.scratchPad=Scratch Pad
 #2. Report Element ( Prefix = Element.ReportElement )
 Element.ReportElement.displayName=Display name
 Element.ReportElement.displayNameID=Display name key
-Element.ReportElement.javaClass=Java Class
 Element.ReportElement.comments=Comments
 Element.ReportElement.propertyMask=Property mask
 Element.ReportElement.name=Name
@@ -1892,12 +1891,12 @@ Element.MasterPage.slot.contents=Contents
 
 #9. Style ( Prefix = Element.Style)
 Element.Style.background=Background
-Element.Style.background.attachment=Attachment
+Element.Style.background.attachment=Background attachment
 Element.Style.background.color=Background color
 Element.Style.background.image=Background image
 Element.Style.background.positionX=Horizontal position
 Element.Style.background.positionY=Vertical position
-Element.Style.background.repeat=Repeat
+Element.Style.background.repeat=Background repeat
 Element.Style.border=Border
 Element.Style.border.bottom.color=Border bottom color
 Element.Style.border.bottom.style=Border bottom style
@@ -1923,19 +1922,19 @@ Element.Style.canShrink=Shrink
 Element.Style.display=Display
 Element.Style.font=Font
 Element.Style.color=Font color
-Element.Style.font.family=Font
-Element.Style.font.size=Size
-Element.Style.font.style=Style
+Element.Style.font.family=Font family
+Element.Style.font.size=Font size
+Element.Style.font.style=Font style
 Element.Style.font.textLineThrough=Line-through
 Element.Style.font.textUnderline=Underline
 Element.Style.font.textOverline=Overline
 Element.Style.font.variant=Font variant
-Element.Style.font.weight=Weight
+Element.Style.font.weight=Font weight
 Element.Style.format=Format
-Element.Style.format.dateTime=Date/Time
-Element.Style.format.number=Number
-Element.Style.format.number.align=Format number alignment
-Element.Style.format.string=String
+Element.Style.format.dateTime=Date/Time format
+Element.Style.format.number=Number format
+Element.Style.format.number.align=Number alignment
+Element.Style.format.string=String format
 Element.Style.highlight.testExpr=Highlight test expression
 Element.Style.highlight.rules=Highlight rules
 Element.Style.letterSpacing=Letter spacing
@@ -1946,15 +1945,15 @@ Element.Style.margin.top=Margin top
 Element.Style.margin.bottom=Margin bottom
 Element.Style.margin.left=Margin left
 Element.Style.margin.right=Margin right
-Element.Style.masterPage=MasterPage
+Element.Style.masterPage=Master page
 Element.Style.padding=Padding
 Element.Style.padding.bottom=Padding bottom
 Element.Style.padding.left=Padding left
 Element.Style.padding.right=Padding right
 Element.Style.padding.top=Padding top
-Element.Style.pageBreakBefore=Before
-Element.Style.pageBreakAfter=After
-Element.Style.pageBreakInside=Inside
+Element.Style.pageBreakBefore=Page break before
+Element.Style.pageBreakAfter=Page break after
+Element.Style.pageBreakInside=Page break inside
 Element.Style.section=Section
 Element.Style.showIfBlank=Show if blank
 Element.Style.text=Text
@@ -1969,7 +1968,7 @@ Element.Style.wordSpacing=Word spacing
 
 #10.ReportItem  ( prefix  Element.ReportItem )
 Element.ReportItem.bookmark=Bookmark
-Element.ReportItem.toc=toc
+Element.ReportItem.toc=TOC
 Element.ReportItem.dataSet=Data set
 Element.ReportItem.x=X
 Element.ReportItem.y=Y
@@ -2009,7 +2008,7 @@ Element.Text.contentID=Content key
 #15.ListingGroup  ( prefix  Element.ListingGroup )
 Element.ListingGroup.keyExpr=Key expression
 Element.ListingGroup.sort=Sort
-Element.ListingGroup.toc=toc
+Element.ListingGroup.toc=TOC
 Element.ListingGroup.groupName=Name
 Element.ListingGroup.interval=Interval
 Element.ListingGroup.intervalRange=Interval range
@@ -2027,7 +2026,6 @@ Element.ListingGroup.onFinish.toolTip=Called after the last row is read from the
 #16.List  ( prefix  Element.List )
 Element.List.slot.header=header
 Element.List.slot.group=group
-Element.List.slot.columnHeader=columnHeader
 Element.List.slot.detail=detail
 Element.List.slot.footer=footer
   
@@ -2041,7 +2039,6 @@ Element.Table.captionID=Caption key
 Element.Table.repeatHeader=Repeat header
 Element.Table.slot.header=header
 Element.Table.slot.group=group
-Element.Table.slot.columnHeader=columnHeader
 Element.Table.slot.detail=detail
 Element.Table.slot.footer=footer
 Element.Table.slot.columns=columns
@@ -2059,7 +2056,7 @@ Element.Column.alignment=Alignment
 Element.Row.visibility=Visibility
 Element.Row.height=Height
 Element.Row.bookmark=Bookmark
-Element.Row.slot.cell=cell
+Element.Row.slot.cell=Cell
   
 #22.Cell  ( prefix  Element.Cell )
 Element.Cell.column=Column
@@ -2076,12 +2073,12 @@ Element.Image.altText=Alternative text
 Element.Image.altTextID=Alternative text key
 Element.Image.helpText=Help text
 Element.Image.helpTextID=Help text key
-Element.Image.size=size
-Element.Image.scale=scale
+Element.Image.size=Size
+Element.Image.scale=Scale
 Element.Image.source=Source
-Element.Image.uri=uri
+Element.Image.uri=URI
 Element.Image.imageName=Image name
-Element.Image.valueExpr=value exprssion
+Element.Image.valueExpr=Value exprssion
 Element.Image.typeExpr=Type exprssion
 Element.Image.action=Action
   
@@ -2090,15 +2087,15 @@ Element.Grid.slot.columns=columns
 Element.Grid.slot.row=row
   
 #25.Line  ( prefix  Element.Line )
-Element.Line.orientation=orientation
+Element.Line.orientation=Orientation
   
 #26.MultiLineData  ( prefix  Element.MultiLineData )
 Element.MultiLineData.valueExpr=Value expression
 Element.MultiLineData.contentTypeExpr=Content type expression
 
 #27.ExtendedItem   ( prefix  Element.ExtendedItem )
-Element.ExtendedItem.extensionName=extension name
-Element.ExtendedItem.extension=extension name
+Element.ExtendedItem.extensionName=Extension name
+Element.ExtendedItem.extension=Extension name
 
 #28.DataSource ( prefix Element.DataSource )
 Element.DataSource.beforeOpen=Before open
@@ -2136,15 +2133,14 @@ Element.Listing.onRow.toolTip=Called for each row retrieved from the data set fo
 Element.Listing.onFinish=On finish
 Element.Listing.onFinish.toolTip=Called after the last row is read from the data set for this element, but before the footer band is created.
 
-
 #33 GraphicMasterPage ( Prefix Element.GraphicMasterPage)
 Element.GraphicMasterPage.columns=Columns
 Element.GraphicMasterPage.columnSpacing=Column space
 Element.GraphicMasterPage.slot.contents=Content
 
 #34 SimpleMasterPage ( Prefix Element.SimpleMasterPage)
-Element.SimpleMasterPage.showHeaderOnFirst=Show header on first
-Element.SimpleMasterPage.showFooterOnLast=Show footer on last
+Element.SimpleMasterPage.showHeaderOnFirst=Show header on first page
+Element.SimpleMasterPage.showFooterOnLast=Show footer on last page
 Element.SimpleMasterPage.floatingFooter=Floating footer
 Element.SimpleMasterPage.slot.pageHeader=Page Header
 Element.SimpleMasterPage.slot.pageFooter=Page Footer
