--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -2502,6 +2502,7 @@ Error.DesignParserException.WRONG_EXTENDED_PROPERTY_TYPE=The property is not an 
 Error.DesignParserException.INVALID_STRUCTURE_NAME=The name is not a structure name.
 Error.DesignParserException.INVALID_PROPERTY_SYNTAX=The property must be defined as attribute of element.
 Error.DesignParserException.UNDEFINED_PROPERTY=The property is not defined.
+Error.DesignParserException.UNSUPPORTED_ENCODING=The encoding format of this XML file is not supported.
 
 #DesignFileException
 Error.DesignFileException.FILE_NOT_FOUND=The file "{0}" is not found.
