Renames MultiLineDataItem to TextDataItem.

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -1744,7 +1744,7 @@ Element.Tile=Tile
 Element.Rectangle=Rectangle
 Element.GraphicMasterPage=Graphic Master Page
 Element.SimpleMasterPage=Simple Master Page
-Element.MultiLineData=Multi line data
+Element.TextData=Text data
 Element.ExtendedItem=Extended item
 Element.ScriptDataSource=Script Data Source
 Element.ScriptDataSet=Script Data Set
@@ -2089,9 +2089,9 @@ Element.Grid.slot.row=row
 #25.Line  ( prefix  Element.Line )
 Element.Line.orientation=Orientation
   
-#26.MultiLineData  ( prefix  Element.MultiLineData )
-Element.MultiLineData.valueExpr=Value expression
-Element.MultiLineData.contentTypeExpr=Content type expression
+#26.TextData  ( prefix  Element.TextData )
+Element.TextData.valueExpr=Value expression
+Element.TextData.contentTypeExpr=Content type expression
 
 #27.ExtendedItem   ( prefix  Element.ExtendedItem )
 Element.ExtendedItem.extensionName=Extension name
@@ -2304,7 +2304,7 @@ Style.Toc9=Toc9
 Style.FreeForm=FreeForm
 Style.Line=Line
 Style.Rectangle=Rectangle
-Style.MultiLineData=MultiLineData
+Style.TextData=TextData
 Style.ExtendedItem=ExtendedItem
 
 ###########################################################
@@ -2365,7 +2365,7 @@ New.Tile=Tile
 New.Rectangle=Rectangle
 New.GraphicMasterPage=GraphicMasterPage
 New.SimpleMasterPage=SimpleMasterPage
-New.MultiLineData=MultiLineData
+New.TextData=TextData
 New.ExtendedItem=ExtendedItem
 New.ScriptDataSource=ScriptDataSource
 New.ScriptDataSet=ScriptDataSet
