Revised GroupElementHandle and other minor problems.

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -110,7 +110,7 @@ Choices.paramType.boolean=Boolean
   
 #6.paramControl
 Choices.paramControl.text-box=Text Box
-Choices.paramControl.list-box=List Box
+Choices.paramControl.list-box=Combo/List Box
 Choices.paramControl.radio-button=Radio Button
 Choices.paramControl.check-box=Check Box
   
