Improvement on error messages.

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -2409,7 +2409,7 @@ Error.ExtendsException.PARENT_NOT_IN_COMPONENT=The parent element "{0}" is not i
 #NameException
 Error.NameException.NAME_REQUIRED=The name of {0} is required.
 Error.NameException.NAME_FORBIDDEN=The {0} is not allowed to have name.
-Error.NameException.DUPLICATE=The new name "{0}" is duplicate in the name space.
+Error.NameException.DUPLICATE=The name "{0}" duplicates an existing name. Please choose a different name.
 Error.NameException.HAS_REFERENCES=The {0} has derived element, the name cannot be cleared.
 Error.NameException.MEMBER_NOT_FOUND=Member:{0} does not resolve to the member of a structure
 
@@ -2450,7 +2450,7 @@ Error.SemanticError.CANNOT_SPECIFY_PAGE_SIZE=The master page "{0}" cannot specif
 Error.SemanticError.INVALID_PAGE_MARGINS=The master page "{0}" has invalid margin value.
 Error.SemanticError.MISSING_MASTER_PAGE=The report must have at least one master page.
 Error.SemanticError.INVALID_MULTI_COLUMN=The master page "{0}" has the columns spaning outside the page content.
-Error.SemanticError.INVALID_ELEMENT_REF=The element "{0}" has the property "{1}" that refers the inexistent element.
+Error.SemanticError.INVALID_ELEMENT_REF=The element "{0}" has property "{1}" that refers an undefined element "{2}".
 Error.SemanticError.MISSING_SQL_STMT=The JDBC select data set "{0}" must have SQL statement.
 Error.SemanticError.MISSING_DATA_SET=The list/table "{0}" must be able to access one data set.
 Error.SemanticError.INVALID_IMAGE_SCALE_VALUE=The scale value of the image "{0}" must be positive.
