--- a/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
+++ b/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
@@ -86,7 +86,7 @@ SCRIPT_EVAL_ERROR=Error evaluating script (source:{0}, line:{1}):  {2}.
 PREPARED_QUERY_CLOSED=PreparedQuery instance is closed.
 
 QUERY_FAILURE = Invalid query definition
-
+DEFAULT_INPUT_PARAMETER_VALUE_CANNOT_BE_NULL = Default input parameter value cannot be null.
 INVALID_EXPR = Expression is not valid.
 INVALID_GROUP_EXPR = Group key expression {0} is not valid.
 PARAMETER_METADATA_NOT_SUPPORTED=Cannot get parameter metadata for this type of data source.
