- Support for ODA driver plugins 	- Handling ODA driver plugin.xml configurations 	- Using Eclipse classloading scheme for ODA runtime

--- a/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
+++ b/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
@@ -93,8 +93,8 @@ PARAMETER_METADATA_NOT_SUPPORTED=Cannot get parameter metadata for this type of 
 odaconsumer.ColumnNameCannotBeEmptyOrNull=Column name cannot be empty or null.
 odaconsumer.ColumnPositionIsOneBased=Column position cannot be less than 1.
 odaconsumer.ColumnAliasCannotBeEmpty=Column alias cannot be an empty string.
-odaconsumer.CannotProcessOdaConfigFile=Cannot process the ({0}) driver's odaconfig.xml.
-odaconsumer.OdaInitEntryNotFound={0} cannot be found or cannot be instantiated.
+odaconsumer.CannotProcessDriverConfig=Cannot process the ({0}) driver's configurations.
+odaconsumer.OdaInitEntryNotFound=The driver ({0})'s initial entry point cannot be found or cannot be instantiated.
 odaconsumer.OdaDriverOnUnsupportedPlatform=The driver ({0}) does not support {1}.
 odaconsumer.CannotGenerateUrl=Cannot generate URL ({0}) for the classloader.
 odaconsumer.UnsupportedNativeType=Unsupported native type ({0}) for the data set type ({1}) of driver ({2}).
