The new "format" property type supported in model.

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -431,6 +431,7 @@ Choices.dateTimeFormat.shortDate=Short Date
 Choices.dateTimeFormat.longTime=Long Time
 Choices.dateTimeFormat.mediumTime=Medium Time
 Choices.dateTimeFormat.shortTime=Short Time
+Choices.dateTimeFormat.custom=Custom
     
 #60. numberFormat
 Choices.numberFormat.generalNumber=General Number
@@ -439,10 +440,17 @@ Choices.numberFormat.fixed=Fixed
 Choices.numberFormat.percent=Percent
 Choices.numberFormat.scientific=Scientific
 Choices.numberFormat.standard=Standard
+Choices.numberFormat.custom=Custom
     
 #59. StringFormat
+Choices.stringFormat.unformatted=Unformatted
 Choices.stringFormat.upper=Uppercase
 Choices.stringFormat.lower=Lowercase
+Choices.stringFormat.zipCode=Zip Code
+Choices.stringFormat.zipCode+4=Zip Code + 4
+Choices.stringFormat.phoneNumber=Phone Number
+Choices.stringFormat.socialSecurityNumber=Social Security Number
+Choices.stringFormat.custom=Custom
 
 ###########################################################
 # Classes
