--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -2485,7 +2485,7 @@ Error.SemanticError.PROPERTY_COPY_FORBIDDEN=To copy property "{0}" is forbidden.
 
 #StyleException
 Error.StyleException.FORBIDDEN=The {0} can not have a style.
-Error.StyleException.NOT_FOUND=The style "{0}" is not found.
+Error.StyleException.NOT_FOUND=The style "{0}" used by {1} "{2}" is not found.
     
     
 #DesignParserException
@@ -2510,7 +2510,7 @@ Error.DesignParserException.WRONG_XML_TYPE=No such an element property or struct
 Error.DesignParserException.WRONG_EXTENDED_PROPERTY_TYPE=The property is not an extended property.
 Error.DesignParserException.INVALID_STRUCTURE_NAME=The name is not a structure name.
 Error.DesignParserException.INVALID_PROPERTY_SYNTAX=The property must be defined as attribute of element.
-Error.DesignParserException.UNDEFINED_PROPERTY=The property is not defined.
+Error.DesignParserException.UNDEFINED_PROPERTY=The property "{0}" is not defined.
 Error.DesignParserException.UNSUPPORTED_ENCODING=The encoding format of this XML file is not supported.
 
 #DesignFileException
