Add extension support for ODA driver, rename extension pointer and drop "publicDriverProperties"

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -2155,10 +2155,12 @@ Element.SimpleMasterPage.slot.pageFooter=Page Footer
 
 #35 OdaDataSource ( Prefix Element.OdaDataSource )
 Element.OdaDataSource.driverName=Driver name
+Element.OdaDataSource.extensionName=Extension name
 Element.OdaDataSource.publicDriverProperties=Public driver properties
 Element.OdaDataSource.privateDriverProperties=Private driver properties
 
 #36 OdaDataSet ( Prefix Element.OdaDataSet )
+Element.OdaDataSet.extensionName=Extension name
 Element.OdaDataSet.queryText=Query
 Element.OdaDataSet.queryScript=Script
 Element.OdaDataSet.queryScript.toolTip=TBD
