Add displayPrompt property to ScalarParameter

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -1859,6 +1859,7 @@ Element.Parameter.hidden=Hidden
   
 #7. ScalarParameter  ( prefix  Element.ScalarParameter )
 Element.ScalarParameter.dataType=Data type
+Element.ScalarParameter.displayPrompt=Display prompt
 Element.ScalarParameter.concealValue=Conceal value
 Element.ScalarParameter.allowNull=Allow null
 Element.ScalarParameter.allowBlank=Allow blank
