Change some unit properties.

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -94,11 +94,11 @@ Choices.lineStyle.outset=Outset
 Choices.units.in=in
 Choices.units.cm=cm
 Choices.units.mm=mm
-Choices.units.pt=pt
-Choices.units.pc=pc
-Choices.units.em=em
-Choices.units.ex=ex
-Choices.units.px=px
+Choices.units.pt=points
+Choices.units.pc=picas
+Choices.units.em=ems 
+Choices.units.ex=exs
+Choices.units.px=pixels
 Choices.units.%=%
 
 #5.paramType
