Copy/paste support for the single column in Grid/Table.

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -2485,6 +2485,9 @@ Error.SemanticError.DUPLICATE_CUSTOM_COLOR_NAME=The color pallete has duplicate 
 Error.SemanticError.EXTENSION_NOT_FOUND=The extension name "{0}" of element "{1}" is not found.
 Error.SemanticError.MISSING_EXTENSION=The extension name of element "{0}" must be defined.
 Error.SemanticError.PROPERTY_COPY_FORBIDDEN=To copy property "{0}" is forbidden.
+Error.SemanticError.COLUMN_COPY_FORBIDDEN=The copy operation on the column "{0}"  of the element "{1}" is forbidden.
+Error.SemanticError.COLUMN_PASTE_FORBIDDEN=The paste operation on the element "{1}" is forbidden.
+Error.SemanticError.COLUMN_PASTE_DIFFERENT_LAYOUT=The paste area has the different layout with the copied area..
 
 #StyleException
 Error.StyleException.FORBIDDEN=The {0} can not have a style.
