Add choice set for target property of Action.

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -452,6 +452,14 @@ Choices.stringFormat.phoneNumber=Phone Number
 Choices.stringFormat.socialSecurityNumber=Social Security Number
 Choices.stringFormat.custom=Custom
 
+
+#60. targetNames
+Choices.targetNames.blank=Blank
+Choices.targetNames.self=Self
+Choices.targetNames.parent=Parent
+Choices.targetNames.top=Top
+
+
 ###########################################################
 # Classes
 
