Added one semantic error for drop. Added choices. Added content information when drop an element.

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -424,6 +424,7 @@ Choices.columnAlign.center=Center
 Choices.columnAlign.right=right
 
 #59. dateTimeFormat
+Choices.dateTimeFormat.unformatted=Unformatted
 Choices.dateTimeFormat.generalDate=General Date
 Choices.dateTimeFormat.longDate=Long Date
 Choices.dateTimeFormat.mediumDate=Medium Date
@@ -434,6 +435,7 @@ Choices.dateTimeFormat.shortTime=Short Time
 Choices.dateTimeFormat.custom=Custom
     
 #60. numberFormat
+Choices.numberFormat.unformatted=Unformatted
 Choices.numberFormat.generalNumber=General Number
 Choices.numberFormat.currency=Currency
 Choices.numberFormat.fixed=Fixed
@@ -878,9 +880,9 @@ Class.Number.toolTip=An object representation of numeric data and placeholder fo
 Class.Number.Number=Number
 Class.Number.Number.toolTip=Returns a number value computed by ToNumber(value)
 Class.Number.MAX_VALUE=MAX_VALUE
-Class.Number.MAX_VALUE.toolTip=The largest positive finite value of the number type, which is approximately 1.7976931348623157 × 10308.
+Class.Number.MAX_VALUE.toolTip=The largest positive finite value of the number type, which is approximately 1.7976931348623157 \ufffd 10308.
 Class.Number.MIN_VALUE=MIN_VALUE
-Class.Number.MIN_VALUE.toolTip=The smallest positive value of the number type, which is approximately 5 × 10-324.
+Class.Number.MIN_VALUE.toolTip=The smallest positive value of the number type, which is approximately 5 \ufffd 10-324.
 Class.Number.NaN=NaN
 Class.Number.NaN.toolTip=Not a number.
 Class.Number.NEGATIVE_INFINITY=NEGATIVE_INFINITY
@@ -2460,6 +2462,7 @@ Error.PropertyValueException.UNIT_REQUIRED = The unit is required for the proper
 Error.SemanticError.INVALID_COL_SPAN=The column span in the table "{0}" must be larger than or equals 1.
 Error.SemanticError.INVALID_ROW_SPAN=The row span in the table "{0}" must be larger than or equals 1.
 Error.SemanticError.INCONSITENT_TABLE_COL_COUNT=The table "{0}" has inconsistent column count.
+Error.SemanticError.INCONSITENT_TABLE_COL_COUNT_COZ_DROP=The table "{0}" has inconsistent column count becuase of drop properties of some cells in group header.
 Error.SemanticError.INCONSITENT_GRID_COL_COUNT=The grid "{0}" has inconsistent column count.
 Error.SemanticError.OVERLAPPING_TABLE_CELLS=The table "{0}" has overlapping cells.
 Error.SemanticError.OVERLAPPING_GRID_CELLS=The grid "{0}" has overlapping cells.
