--- a/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
+++ b/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
@@ -17,12 +17,12 @@ NOT_END_GROUP=This aggregate expression is only available at the end of a group
 INVALID_GROUP_LEVEL=Invalid grouping level for aggregate function: {0}
 INVALID_AGGR_PARAMETER=Wrong number of arguments to aggregate function: {0}
 
-DUPLICATE_PROPERTY_NAME=Invalid use of duplicate property name: {0}
+DUPLICATE_PROPERTY_NAME=The property name is duplicated: {0}
 SUBQUERY_NOT_FOUND=Subquery name not found
 
 CONDITIONAL_EXPR_NOT_SUPP=Conditional expression not supported
 MISSING_DRIVERNAME=Missing driverName in data source definition, {0}
-
+STARTING_GROUP_VALUE_CANNOT_BE_NULL=The starting group value cannot be null
 RESULT_CLOSED=ResultIterator has been closed.
 RESULT_ENDED=Cursor has no current row.
 INVALID_JS_EXPR=Invalid Javascript expression
@@ -86,12 +86,12 @@ SCRIPT_EVAL_ERROR=Error evaluating script (source:{0}, line:{1}):  {2}.
 PREPARED_QUERY_CLOSED=PreparedQuery instance is closed.
 
 QUERY_FAILURE = Invalid query definition
-DEFAULT_INPUT_PARAMETER_VALUE_CANNOT_BE_NULL = Default input parameter value cannot be null.
+DEFAULT_INPUT_PARAMETER_VALUE_CANNOT_BE_NULL = Default input value of parameters cannot be null.
 INVALID_EXPR = Expression is not valid.
 INVALID_GROUP_EXPR = Group key expression {0} is not valid.
 PARAMETER_METADATA_NOT_SUPPORTED=Cannot get parameter metadata for this type of data source.
 odaconsumer.ColumnNameCannotBeEmptyOrNull=Column name cannot be empty or null.
-odaconsumer.ColumnPositionIsOneBased=Column position cannot be less than 1.
+odaconsumer.ColumnPositionIsOneBased=Column position is 1-based and cannot be less than 1.
 odaconsumer.ColumnAliasCannotBeEmpty=Column alias cannot be an empty string.
 odaconsumer.CannotProcessDriverConfig=Cannot process the ({0}) driver's configurations.
 odaconsumer.OdaInitEntryNotFound=The driver ({0})'s initial entry point cannot be found or cannot be instantiated.
