--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -1774,6 +1774,7 @@ Element.OdaDataSource=ODA Data Source
 # Element property names
 
 #1. Report Design ( Prefix = Element.ReportDesign )
+Element.ReportDesign.version=Version
 Element.ReportDesign.author=Author
 Element.ReportDesign.helpGuide=Help guide
 Element.ReportDesign.createdBy=Created by
@@ -2529,6 +2530,9 @@ Error.DesignParserException.INVALID_STRUCTURE_NAME=The name is not a structure n
 Error.DesignParserException.INVALID_PROPERTY_SYNTAX=The property must be defined as attribute of element.
 Error.DesignParserException.UNDEFINED_PROPERTY=The property "{0}" is not defined.
 Error.DesignParserException.UNSUPPORTED_ENCODING=The encoding format of this XML file is not supported.
+Error.DesignParserException.PROPERTY_IS_NOT_ENCRYPTABLE=The property "{0}" is not encryptable.
+Error.DesignParserException.UNSUPPORTED_VERSION=The report file of version "{0}" is not supported.
+Error.DesignParserException.INVALID_VERSION=The report version "{0}" is invalid.
 
 #DesignFileException
 Error.DesignFileException.FILE_NOT_FOUND=The file "{0}" is not found.
