--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -1569,6 +1569,9 @@ Structure.DataSetParam=DataSet Parameter
 Structure.PropertyMask=Property Mask
 Structure.ExtendedProperty=Extended Property
 Structure.CachedMetaData=Cached Metadata
+Structure.NumberFormatValue=Number Format Value
+Structure.StringFormatValue=String Format Value
+Structure.DateTimeFormatValue=Date Time Format Value
 
 #0.MapRule
 Structure.MapRule.operator=operator
@@ -1726,6 +1729,17 @@ Structure.Action.drillThroughSearch=Search Keys
 Structure.CachedMetaData.parameters=Parameters
 Structure.CachedMetaData.resultSet=Result set columns
 
+#19. NumberFormatValue
+Structure.NumberFormatValue.category=Category
+Structure.NumberFormatValue.pattern=Pattern
+
+#20. StringFormatValue
+Structure.StringFormatValue.category=Category
+Structure.StringFormatValue.pattern=Pattern
+
+#21. DateTimeFormatValue
+Structure.DateTimeFormatValue.category=Category
+Structure.DateTimeFormatValue.pattern=Pattern
 
 ###########################################################
 # Element names
