Rename isNullable to allowNull in DataSetParam; Unresolved style name is kept for undo; IValidationListener receives validation event after whole report is checked

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -1705,7 +1705,7 @@ Structure.DataSetParam.dataType=Data Type
 Structure.DataSetParam.position=Position
 Structure.DataSetParam.defaultValue=Default Value
 Structure.DataSetParam.isOptional=Is Optional
-Structure.DataSetParam.isNullable=Is Nullable
+Structure.DataSetParam.allowNull=Allow Null
 Structure.DataSetParam.isInput=Is Input Parameter
 Structure.DataSetParam.isOutput=Is Output Parameter
 
@@ -1862,8 +1862,6 @@ Element.DataSet.afterOpen=After open
 Element.DataSet.afterOpen.toolTip=Called just after BIRT opens the data set.
 Element.DataSet.afterClose=After close
 Element.DataSet.afterClose.toolTip=Called just after BIRT closes the data set.
-#Element.DataSet.inputParameters=Input parameters
-#Element.DataSet.outputParameters=Output parameters
 Element.DataSet.parameters=Parameters
 Element.DataSet.paramBindings=Parameter bindings
 Element.DataSet.resultSet=Result set
