- SCR(s) Resolved: SCR #78199
- Description:
Incomplete message in org.eclipse.birt.report.model messages.properties
- Regression ( Yes/No ): No
- Code Owner: Nina Li
- Code Reviewers:
- Test Automated (Yes/No, if "No", then explain why): No, Gui Feature
- Notes to Developers:
- Notes to QA:
- Notes to Documentation:
- Notes to Configuration Management:
- Notes to Support:
- Notes to Product Marketing:

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -544,7 +544,7 @@ Class.Global.toolTip=An intrinsic object whose purpose is to collect global meth
 Class.Global.NaN=NaN
 Class.Global.NaN.toolTip=The initial value is not a number.
 Class.Global.Infinity=Infinity
-Class.Global.Infinity.toolTip=The initial value is +?.
+Class.Global.Infinity.toolTip=Returns the value of Number.POSITIVE_INFINITY (a value larger than the largest number (Number.MAX_VALUE) that can be represented in JScript).
 Class.Global.undefined=underfined
 Class.Global.undefined.toolTip=The initial value is undefined.
 Class.Global.decodeURI=decodeURI
@@ -562,7 +562,7 @@ Class.Global.eval.toolTip=Evaluates JScript code and executes it.
 Class.Global.isNaN=isNaN
 Class.Global.isNaN.toolTip=Applies ToNumber to its argument, then returns true if the result is NaN.
 Class.Global.isFinite=isFinite
-Class.Global.isFinite.toolTip=Applies ToNumber to its argument, then returns false if the result is NaN, +?, or ??.
+Class.Global.isFinite.toolTip=Returns a Boolean value that indicates if a supplied number is finite.
 Class.Global.parseFloat=parseFloat
 Class.Global.parseFloat.toolTip=Returns a floating-point number converted from a string. 
 Class.Global.parseInt=parseInt
@@ -686,7 +686,7 @@ Class.Date.getUTCSeconds.toolTip=Returns the second value in a Date object using
 Class.Date.getYear=getYear
 Class.Date.getYear.toolTip=Returns the year value in a Date object.
 Class.Date.parse=parse
-Class.Date.parse.toolTip=Parses a string containing a date, and returns the number of milliseconds
+Class.Date.parse.toolTip=Parses a string containing a date, and returns the number of milliseconds.
 Class.Date.setDate=setDate
 Class.Date.setDate.toolTip=Sets the date of a Date object in the local time zone.
 Class.Date.setFullYear=setFullYear
@@ -834,9 +834,9 @@ Class.Math.exp.toolTip=Returns an implementation-dependent approximation to the 
 Class.Math.floor=floor
 Class.Math.floor.toolTip=Returns the greatest number value that is not greater than x and is equal to a mathematical integer.
 Class.Math.log=log
-Class.Math.log.toolTip=Returns an implementation-dependent approximation to the natural logarithm
+Class.Math.log.toolTip=Returns an implementation-dependent approximation to the natural logarithm.
 Class.Math.max=max
-Class.Math.max.toolTip=Returns the largest of the resulting values
+Class.Math.max.toolTip=Returns the largest of the resulting values.
 Class.Math.min=min
 Class.Math.min.toolTip=Returns the smallest of the resulting values.
 Class.Math.pow=pow
@@ -878,7 +878,7 @@ Class.Math.tan.x=x
 Class.Number=Number
 Class.Number.toolTip=An object representation of numeric data and placeholder for numeric constants.
 Class.Number.Number=Number
-Class.Number.Number.toolTip=Returns a number value computed by ToNumber(value)
+Class.Number.Number.toolTip=Returns a number value computed by ToNumber(value).
 Class.Number.MAX_VALUE=MAX_VALUE
 Class.Number.MAX_VALUE.toolTip=The largest positive finite value of the number type, which is approximately 1.7976931348623157 \ufffd 10308.
 Class.Number.MIN_VALUE=MIN_VALUE
@@ -886,9 +886,9 @@ Class.Number.MIN_VALUE.toolTip=The smallest positive value of the number type, w
 Class.Number.NaN=NaN
 Class.Number.NaN.toolTip=Not a number.
 Class.Number.NEGATIVE_INFINITY=NEGATIVE_INFINITY
-Class.Number.NEGATIVE_INFINITY.toolTip=The value is ??.
+Class.Number.NEGATIVE_INFINITY.toolTip=Returns a value more negative than the largest negative number (-Number.MAX_VALUE) representable in JScript. 
 Class.Number.POSITIVE_INFINITY=POSITIVE_INFINITY
-Class.Number.POSITIVE_INFINITY.toolTip=The value is +?.
+Class.Number.POSITIVE_INFINITY.toolTip=Returns a value larger than the largest number (Number.MAX_VALUE) that can be represented in JScript. 
 Class.Number.toExpoential=toExpoential
 Class.Number.toExpoential.toolTip=Returns a string containing a number represented in exponential notation.
 Class.Number.toFixed=toFixed
@@ -1001,7 +1001,7 @@ Class.ElementState.slot.toolTip=Provides access to the elements that this elemen
 
 #11. Color
 
-Class.Color=color
+Class.Color=Color
 Class.Color.toolTip=The color property object provides methods that work with color values as names, RGB values.
 Class.Color.transparent=transparent
 Class.Color.transparent.toolTip=Returns true if the property is set to the CSS transparent value.
@@ -1047,7 +1047,7 @@ Class.PropertyDefn.defaultValue.toolTip=Default value for the property.
 
 #14. Report
 
-Class.Report=report
+Class.Report=Report
 Class.Report.toolTip=Provides access to all information about the report and the context in which the report is running.
 Class.Report.design=design
 Class.Report.design.toolTip=Returns a ReportDefn object that describes the design of the report.
@@ -1128,7 +1128,7 @@ Class.DataSet.privateProperties.toolTip=Provides the private properties for an O
 Class.DataRow=DataRow
 Class.DataRow.toolTip=Represents one row fetched from a data set.
 Class.DataRow.DataRow=DataRow
-Class.DataRow.DataRow.toolTip=Create a blank data row given a data set or a data row as a copy of another or
+Class.DataRow.DataRow.toolTip=Create a blank data row given a data set or a data row as a copy of another.
 Class.DataRow.DataRow.ds=ds
 Class.DataRow.DataRow.r=r
 Class.DataRow.column=column
@@ -1144,7 +1144,7 @@ Class.DataRow.schema.toolTip=Returns an array of column descriptions for the dat
 #19. ColumnDefn
 
 Class.ColumnDefn=ColumnDefn
-Class.ColumnDefn.toolTip=Describes ?meta-data? for a data row column.
+Class.ColumnDefn.toolTip=Describes meta-data for a data row column.
 Class.ColumnDefn.index=index
 Class.ColumnDefn.index.toolTip=Returns index of the column within the result set data row for the data set.
 Class.ColumnDefn.name=name
