Enhance the exception messages

--- a/data/org.eclipse.birt.report.data.oda.jdbc/src/org/eclipse/birt/report/data/oda/i18n/Messages.properties
+++ b/data/org.eclipse.birt.report.data.oda.jdbc/src/org/eclipse/birt/report/data/oda/i18n/Messages.properties
@@ -67,15 +67,13 @@ odajdbc.PrepareStatement.CannotGetParameterType=Can not get the paramter type fr
 odajdbc.CannotGetParameterMetadata=Can not retrieve the parameter metadata
 odajdbc.ClearParametersError=Error occurs when clear the current parameter value
 
-
-
-
-
-
-
-
-
-
+#used in assert error
+odajdbc.driver.ConnNotOpen=Connection not opened
+odajdbc.driver.DriverMissingProperties=Missing properties in Connection.open(Properties)
+odajdbc.driver.ParameterMetadataCannotNull=ParameterMetaData can't be null
+odajdbc.driver.ResultSetCannotNull=ResultSet can't be null
+odajdbc.driver.ResultSetMetadataCannotNull=ResultSetMetaData can't be null
+odajdbc.driver.StatementCannotNull=Statement need to be prepared before this operation
 
 
 
