the expression of Computed column will be checked whether it will be trimmed to the length of 0.

--- a/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
+++ b/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
@@ -23,13 +23,14 @@ SUBQUERY_NOT_FOUND=Subquery name not found
 CONDITIONAL_EXPR_NOT_SUPP=Conditional expression not supported
 MISSING_DRIVERNAME=Missing driverName in data source definition, {0}
 STARTING_GROUP_VALUE_CANNOT_BE_NULL=The starting group value cannot be null
+
 RESULT_CLOSED=ResultIterator has been closed.
 RESULT_ENDED=Cursor has no current row.
 INVALID_JS_EXPR=Invalid Javascript expression
 INVALID_TOTAL_NAME=Invalid Total function name: {0}
 INVALID_CALL_AGGR=Aggregate function call is not expected in this expression.
 INVALID_EXPR_HANDLE=Invalid expression handle
-EXPRESSION_CANNOT_BE_NULL_OR_BLANK=The expression cannot be null or blank
+
 NO_CURRENT_ROW=No current row
 IT_NOT_STARTED=This iterator has not started
 INVALID_KEY_COLUMN=Invalid sort key column: {0}
@@ -66,10 +67,11 @@ NOT_SUPPORTED_TYPE=Not supported type
 
 ILLEGAL_PARAMETER_FUN=Illegal parameter for function {0}
 RESET_RATE=User should reset a new rate guess
-
 UNSUPPORTTED_OPERATOR=The operator is not yet supported
-
 NOT_SUPPORTED_NOW=Currently this function {0} does not get support.
+EXPRESSION_CANNOT_BE_NULL_OR_BLANK=The expression cannot be null or blank
+#computed column value
+EXPR_INVALID_COMPUTED_COLUMN=The expression of computed column {0} is not valid.
 
 # Wrapper Error
 DATATYPEUTIL_ERROR=An error is thrown by DataTypeUtil.
@@ -82,14 +84,17 @@ DS_OPEN_ERROR=DS_OPEN_ERROR
 DS_COLUMN_HINTS_ERROR=DS_COLUMN_HINTS_ERROR
 DS_PARAMETER_ERROR=DS_PARAMETER_ERROR
 DS_COMPUTED_COLUMN_ERROR=DS_COMPUTED_COLUMN_ERROR
+
+# other error
 SCRIPT_EVAL_ERROR=Error evaluating script (source:{0}, line:{1}):  {2}.
 PREPARED_QUERY_CLOSED=PreparedQuery instance is closed.
-
 QUERY_FAILURE = Invalid query definition
 DEFAULT_INPUT_PARAMETER_VALUE_CANNOT_BE_NULL = Default input value of parameters cannot be null.
 INVALID_EXPR = Expression is not valid.
 INVALID_GROUP_EXPR = Group key expression {0} is not valid.
 PARAMETER_METADATA_NOT_SUPPORTED=Cannot get parameter metadata for this type of data source.
+
+# oda consumer error
 odaconsumer.ColumnNameCannotBeEmptyOrNull=Column name cannot be empty or null.
 odaconsumer.ColumnPositionIsOneBased=Column position is 1-based and cannot be less than 1.
 odaconsumer.ColumnAliasCannotBeEmpty=Column alias cannot be an empty string.
