Add error state about Filter on Group

--- a/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
+++ b/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
@@ -64,12 +64,14 @@ INVALID_FETCH_SCIRPT=Fetch script of Scripted DataSet is not valid.
 TYPE_NOT_SUPPORTED=Type is not supported
 INVALID_FIELD_NAME=Invalid field name: {0}
 NOT_SUPPORTED_TYPE=Not supported type
+UNSUPPORTED_FILTER_ON_GROUP=Filtering on groups is not current supported!
 
 ILLEGAL_PARAMETER_FUN=Illegal parameter for function {0}
 RESET_RATE=User should reset a new rate guess
 UNSUPPORTTED_OPERATOR=The operator is not yet supported
 NOT_SUPPORTED_NOW=Currently this function {0} does not get support.
 EXPRESSION_CANNOT_BE_NULL_OR_BLANK=The expression cannot be null or blank
+
 #computed column value
 EXPR_INVALID_COMPUTED_COLUMN=The expression of computed column {0} is not valid.
 
