Return null when expression is not valid, rather than throw exception.

--- a/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
+++ b/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
@@ -74,6 +74,7 @@ EXPRESSION_CANNOT_BE_NULL_OR_BLANK=The expression cannot be null or blank
 
 #computed column value
 EXPR_INVALID_COMPUTED_COLUMN=The expression of computed column {0} is not valid.
+INVALID_EXPRESSION_IN_FILTER=The expression <{0}> of filter is not invalid.
 
 # Wrapper Error
 DATATYPEUTIL_ERROR=An error is thrown by DataTypeUtil.
