--- a/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
+++ b/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
@@ -8,94 +8,80 @@ Error.Msg001={0} not found in {0}.
 ###########################################################
 
 # DTE error code
-UNDEFINED_DATA_SOURCE=Data source {0} is not defined
-UNDEFINED_DATA_SET=Data set {0} is not defined
-UNSUPPORTED_DATASOURCE_TYPE=Unsupported data source type
-UNSUPPORTED_DATASET_TYPE=Unsupported data set type
+data.engine.UndefinedDataSource=Data source {0} is not defined
+data.engine.UndefinedDataSet=Data set {0} is not defined
+data.engine.UnsupportedDataSourceType=Data source '{0}' is of an unsupported type
+data.engine.UnsupportedDataSetType=Data set '{0}' is of an unsupported type
 
-NOT_END_GROUP=This aggregate expression is only available at the end of a group
-INVALID_GROUP_LEVEL=Invalid grouping level for aggregate function: {0}
-INVALID_AGGR_PARAMETER=Wrong number of arguments to aggregate function: {0}
+data.engine.EndOfGroupOnly=This aggregate expression is only available at the end of a group
+data.engine.InvalidAggrGroup=Invalid grouping level for aggregate function: {0}
+data.engine.WrongNumAggrArgs=Wrong number of arguments to aggregate function: {0}
 
-DUPLICATE_PROPERTY_NAME=The property name is duplicated: {0}
-SUBQUERY_NOT_FOUND=Subquery name not found
+data.engine.DupPropertyName=Found duplicate property name: {0}
+data.engine.NoSubQueryName=Cannot find subquery with name '{0}'
 
-CONDITIONAL_EXPR_NOT_SUPP=Conditional expression not supported
-MISSING_DRIVERNAME=Missing driverName in data source definition, {0}
-STARTING_GROUP_VALUE_CANNOT_BE_NULL=The starting group value cannot be null
+data.engine.DataSourceMissingDriver=Missing driverName in definition of data source {0}
+data.engine.NullGroupStart=The group start value cannot be null
 
-RESULT_CLOSED=ResultIterator has been closed.
-RESULT_ENDED=Cursor has no current row.
-INVALID_JS_EXPR=Invalid Javascript expression
-INVALID_TOTAL_NAME=Invalid Total function name: {0}
-INVALID_CALL_AGGR=Aggregate function call is not expected in this expression.
-INVALID_EXPR_HANDLE=Invalid expression handle
+data.engine.ResultClosed=Result iterator has been closed.
+data.engine.NoCurrentRow=Result iterator has no current row. It either has not started or has ended.
+data.engine.InvalidJSExpr=Invalid Javascript expression: {0}
+data.engine.InvalidTotalFuncName=Invalid Total function name: {0}
+data.engine.NoAggrFunc=Aggregate function call is not expected in this expression.
+data.engine.InvalidExprHandle=Invalid expression handle
 
-NO_CURRENT_ROW=No current row
-IT_NOT_STARTED=This iterator has not started
-INVALID_KEY_COLUMN=Invalid sort key column: {0}
-INVALID_GROUP_LEVEL_1=Invalid group level
-INVALID_GROUP_KEY_COLUMN=Invalid group key column name: {0}
-INVALID_CLOSESCRIPT=Fails to evaluate closeScript in CustomDataSet
-INVALID_CUSTOM_FIELD_INDEX=Invalid custom field index: {0}
+data.engine.InvalidSortKeyColumn=Invalid sort key column: {0}
+data.engine.InvalidGroupLevel=Invalid group level: {0}
+data.engine.InvalidGroupKeyName=Invalid group key column name: {0}
+data.engine.BadCloseScript=Failed to evaluate closeScript in CustomDataSet
+data.engine.InvalidCustomFieldIdx=Invalid custom field index: {0}
 
-INVALID_OPENSCRIPT=Fails to evaluate openScript in CustomDataSet
-DS_HAS_OPENED=DataSource is already open
-DS_NOT_OPEN=DataSource is not open
-CUSTOM_FIELD_EMPTY=Custom field name must not be empty
-CUSTOM_FIELD_DUPLICATED=Custom field name must not be duplicated
-NO_RESULT_SET=Query statement execution returns no result set
-METADATA_NOT_AVAILABLE=Result metadata not available
-QUERY_HAS_PREPARED=Query already prepared.
-QUERY_HAS_NOT_PREPARED=The query is not prepared yet.
-TYPE_NOT_SUPPORT=type is not supported
-INAVLID_FIELD_NAME=Invalid field name: {0}
-DUPLICATE_COLUMN_NAME=Duplicate column name: {0}
-DUPLICATE_ALIAS_NAME=Duplicate column name or alias: {0}
-INVALID_FIELD_INDEX=Invalid field index: {0}
+data.engine.BadOpenScript=Failed to evaluate openScript in CustomDataSet
+data.engine.DataSourceIsOpen=Data source is already open
+data.engine.DataSourceNotOpen=Data source is not open
+data.engine.EmptyCustomFieldName=Custom field name must not be empty
+data.engine.DupCustomFieldName=Found duplicate custom field name: {0}
+data.engine.NoResultSet=Query execution returned no result set
+data.engine.NoResultMetadata=Result metadata is not available
+data.engine.QueryAlreadyPrepared=Query has already been prepared.
+data.engine.QueryNotPrepared=Query has not yet been prepared.
+data.engine.InvalidFieldName=Invalid field name: {0}
+data.engine.DupColumnName=Duplicate column name: {0}
+data.engine.DupAlias=Duplicate column name or alias: {0}
+data.engine.InvalidFieldIndex=Invalid field index: {0}
 
-INVALID_TYPE=Invalid type
-UNSUPPORTED_DATA_TYPE=Unsupported data type!
+data.engine.MatchError=Error matching object to pattern.
+data.engine.BadOperandType=Unexpected operand data type: {0}
 
-ILLEGAL_PARAMETER=User doesn't input correct parameter or enough parameter
-ILLEGAL_DATA=There exists illegal data
-NO_SOLUTION_FOUND=NOSOLUTIONFOUND
-INVALID_FETCH_SCIRPT=Fetch script of Scripted DataSet is not valid.
-TYPE_NOT_SUPPORTED=Type is not supported
-INVALID_FIELD_NAME=Invalid field name: {0}
-NOT_SUPPORTED_TYPE=Not supported type
-UNSUPPORTED_FILTER_ON_GROUP=Filtering on groups is not current supported!
+data.engine.BadParameterCount=Incorrect number of parameters are supplied.
+data.engine.BadParameterType=One of the parameters has an incorrect data type.
+data.engine.NoIrrSolution=Cannot found a solution for the Irr function with given data.
+data.engine.BadFetchScript=Fetch script for scripted data set is not valid.
+data.engine.BadIntervalUnit=Invalid Interval unit value: {0}
+data.engine.InvalidFieldName=Invalid field name: {0}
+data.engine.BadGroupKeyType=Group key has unsupported data type: {0}
+data.engine.NoSupportFilterOnGroup=Filtering on groups is not current supported.
 
-ILLEGAL_PARAMETER_FUN=Illegal parameter for function {0}
-RESET_RATE=User should reset a new rate guess
-UNSUPPORTTED_OPERATOR=The operator is not yet supported
-NOT_SUPPORTED_NOW=Currently this function {0} does not get support.
-EXPRESSION_CANNOT_BE_NULL_OR_BLANK=The expression cannot be null or blank
+data.engine.BadAggrFuncParam=Illegal parameter for aggregate function {0}
+data.engine.ResetRateGuess=User should reset a new rate guess
+data.engine.UnsupportedCondOp=Conditional operator '{0}' is not supported
+data.engine.EmptyExpression=The expression cannot be null or empty
 
 #computed column value
-EXPR_INVALID_COMPUTED_COLUMN=The expression of computed column {0} is not valid.
-INVALID_EXPRESSION_IN_FILTER=The expression <{0}> of filter is not invalid.
+data.engine.BadCompColExpr=The expression for computed column {0} is not valid.
+data.engine.BadFilterExpr=The filter expression '{0}' is not invalid.
 
 # Wrapper Error
-DATATYPEUTIL_ERROR=An error is thrown by DataTypeUtil.
-INVALID_TYPE_IN_EXPR=Invalid data types in conditional expression.
-AGGREGATION_ERROR=AGGREGATION_ERROR
-TRANSFORM_ERROR=TRANSFORM_ERROR
-
-FETCH_DATA_ERROR=FETCH_DATA_ERROR
-DS_OPEN_ERROR=DS_OPEN_ERROR
-DS_COLUMN_HINTS_ERROR=DS_COLUMN_HINTS_ERROR
-DS_PARAMETER_ERROR=DS_PARAMETER_ERROR
-DS_COMPUTED_COLUMN_ERROR=DS_COMPUTED_COLUMN_ERROR
+data.engine.DataConversionError=An error happened in data type conversion.
+data.engine.BadDataTypeCondExpr=Invalid data type found in conditional expression.
+data.engine.UnexpectedError=Data engine operation failed due to an unexpected exception. 
 
 # other error
-SCRIPT_EVAL_ERROR=Error evaluating script (source:{0}, line:{1}):  {2}.
-PREPARED_QUERY_CLOSED=PreparedQuery instance is closed.
-QUERY_FAILURE = Invalid query definition
-DEFAULT_INPUT_PARAMETER_VALUE_CANNOT_BE_NULL = Default input value of parameters cannot be null.
-INVALID_EXPR = Expression is not valid.
-INVALID_GROUP_EXPR = Group key expression {0} is not valid.
-PARAMETER_METADATA_NOT_SUPPORTED=Cannot get parameter metadata for this type of data source.
+data.engine.ScriptEvalError=Error evaluating script (source:{0}, line:{1}):  {2}.
+data.engine.PreparedQueryClosed=PreparedQuery instance is closed.
+data.engine.NullDefaultInParamValue=Default value for input parameter cannot be null.
+data.engine.BadGroupKeyExpr=Group key expression {0} is not valid.
+data.engine.NoParamMetaForDataSource=Cannot get parameter metadata for this type of data source.
 
 # oda consumer error
 odaconsumer.ColumnNameCannotBeEmptyOrNull=Column name cannot be empty or null.
