--- a/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
+++ b/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
@@ -29,7 +29,7 @@ data.engine.InvalidJSExpr=Invalid Javascript expression: {0}
 data.engine.InvalidTotalFuncName=Invalid Total function name: {0}
 data.engine.NoAggrFunc=Aggregate function call is not expected in this expression.
 data.engine.InvalidExprHandle=Invalid expression handle
-
+data.engine.InvalidAggrGroupExpression=Wrong group expression for aggregate function: {0}
 data.engine.InvalidSortKeyColumn=Invalid sort key column: {0}
 data.engine.InvalidGroupLevel=Invalid group level: {0}
 data.engine.InvalidGroupKeyName=Invalid group key column name: {0}
