bug fixes in Scripted Data Set

--- a/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
+++ b/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
@@ -56,7 +56,7 @@ data.engine.BadOperandType=Unexpected operand data type: {0}
 data.engine.BadParameterCount=Incorrect number of parameters are supplied.
 data.engine.BadParameterType=One of the parameters has an incorrect data type.
 data.engine.NoIrrSolution=Cannot found a solution for the Irr function with given data.
-data.engine.BadFetchScript=Fetch script for scripted data set is not valid.
+data.engine.BadFetchScriptReturnType=Fetch script for scripted data set must return a Boolean result.
 data.engine.BadIntervalUnit=Invalid Interval unit value: {0}
 data.engine.InvalidFieldName=Invalid field name: {0}
 data.engine.BadGroupKeyType=Group key has unsupported data type: {0}
